--- a/mysite/templates/advertisements/index.html
+++ b/mysite/templates/advertisements/index.html
@@ -5,6 +5,7 @@
 Главная страница
 {% endblock %}
 
+
 {% block content %}
 <div id="carouselExampleControls" class="carousel slide bg-primary" data-bs-ride="carousel">
   <div class="carousel-inner">
@@ -12,10 +13,10 @@
       <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'img/adv.png' %}"  class="mx-auto d-block w-33" alt="...">
+      <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'img/adv.png' %}"  class="mx-auto d-block w-33" alt="...">
+      <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -63,7 +64,7 @@
       <div class="row g-0">
         <div class="col-md-4">
           <a href="advertisement.html" class="nav-link">
-            <img src="{% if adv.image %} {{ adv.image.url }} {% else %} {% static 'img/adv.png' %} {% endif %}"  class="img-fluid rounded-start" alt="Card title">
+            <img src="{% if adv.image %} {{ adv.image.url }} {% else %} {% static 'img/adv.png' %} {% endif %}" class="img-fluid rounded-start" alt="Card title">
           </a>
         </div>
         <div class="col-md-8">
@@ -75,15 +76,16 @@
               <p class="card-text">
                 {{ adv.description }}
               </p>
-              <span>{{adv.user}}</span>
-              <p class="card-text"><small class="text-muted">{{ adv.created_at}}</small></p>
+              <span>Автор: {{ adv.user }}</span>
+              <p class="card-text"><small class="text-muted">Размещено: {{ adv.create_ad }}</small></p>
             </a>
           </div>
         </div>
       </div>
     </div>
     {% endfor %}
-
+  </div>
+</div>
 <footer style="padding: 100px;" class="bg-primary">
   <nav class="navbar navbar-expand-sm navbar-dark">
     <a class="navbar-brand" href="#">Добавьте</a>
@@ -116,4 +118,3 @@
   </nav>
 </footer>
 {% endblock %}
-
