--- a/mysite/templates/app_auth/login.html
+++ b/mysite/templates/app_auth/login.html
@@ -5,21 +5,28 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-8" style="margin: 50px;">
-      <div class="display-2">
-        <span class="badge bg-primary">Страница авторизации пользователя</span>
-      </div>
+
+<div class="row">
+  <div class="col" style="margin: 50px;">
+    <div class="display-2">
+      <span class="badge bg-primary">Страница авторизации пользователя</span>
     </div>
   </div>
+
+</div>
+
+<div class="container">
+  {% if error %}
+  <div class="col-sm-4 offset-4 w-25">
+    <div class="form-label bg-warning" style="margin: 10px 0px;">{{ error }}</div>
+  </div>
+  {% endif %}
   <form method="post"> {% csrf_token %}
     <div class="row mb-3">
       <div class="col">
-        {{ error }}
         <label class="col-sm-4 col-form-label offset-4">Username</label>
         <div class="col-sm-4 offset-4 w-25">
-          <input id="username" name="username" type="text" class="form-control form-control-lg">
+          <input name="username" id="username" type="text" class="form-control form-control-lg">
         </div>
       </div>
     </div>
@@ -27,7 +34,7 @@
       <div class="col">
         <label class="col-sm-4 col-form-label offset-4">Password</label>
         <div class="col-sm-4 offset-4 w-25">
-          <input id="password" name="password" type="password" class="form-control form-control-lg">
+          <input name="password" id="password" type="password" class="form-control form-control-lg">
         </div>
       </div>
     </div>
