--- a/mysite/templates/advertisements/advertisement-post.html
+++ b/mysite/templates/advertisements/advertisement-post.html
@@ -6,35 +6,26 @@
 
 {% block content %}
 
-  
-  <div class="row">
-    <div class="col" style="margin: 50px;">
-      <div class="display-2">
-        <span class="badge bg-primary">Сообщите миру об этом в этой форме</span>
-      </div>
+
+<div class="row">
+  <div class="col" style="margin: 50px;">
+    <div class="display-2">
+      <span class="badge bg-primary">Сообщите миру об этом в этой форме</span>
     </div>
   </div>
-  <div class="container">
-
-    <!-- форма -->
-    <!--enctype="multipart/form-data" для отправки медиа файлов  -->
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      <!-- для отправки токена -->
-      <div class="row mb-3 offset-sm-4">
-        <div class="col-6">
-          {{form.as_p}}
-          <!-- as_p as_table as_ul -->
-        </div>
-      <div class="row mb-3 offset-sm-5">
-        <div class="col">
-          <button type="submit" class="btn btn-success">Принять</button>
-        </div>
+</div>
+<div class="container">
+  <form method="post" enctype="multipart/form-data"> {% csrf_token %}
+    <div class="row mb-3 offset-sm-4">
+      <div class="col-6">
+        {{ form.as_p }}
       </div>
-    </form>
-
-
-
-  </div>
-
-  {% endblock %}
+    <div class="row mb-3 offset-sm-2">
+      <div class="col">
+        <button type="submit" class="btn btn-success">Принять</button>
+      </div>
+    </div>
+    </div>
+  </form>
+</div>
+{% endblock %}
