--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -19,40 +19,43 @@
 {% block header %}
 <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'main-page' %}">
-            <span style="font-weight: bold;">Главная</span>
-        </a>
+      <a class="nav-link"  href="/">
+        <span style="font-weight: bold;">Главная</span>
+      </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'sellers' %}"><span style="font-weight: bold;">Топ продавцов</span>
-        </a>
+      <a class="nav-link active" aria-current="page" href="{% url 'top-sellers' %}"><span style="font-weight: bold;">Топ продавцов</span>
+      </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'advert_post' %}">
-            <span style="font-weight: bold;">Разместить объявление</span>
-        </a>
+      <a class="nav-link" href="{% url 'adv-post' %}">
+        <span style="font-weight: bold;">Разместить объявление</span>
+      </a>
+    </li>
+    {% if not user.is_authenticated %}
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'register' %}">
+        <span style="font-weight: bold;">Регистрация</span>
+      </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">
-            <span style="font-weight: bold;">Регистрация</span>
-        </a>
+      <a class="nav-link" href="{% url 'login' %}">
+        <span style="font-weight: bold;">Войти</span>
+      </a>
+    </li>
+    {% else %}
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'profile' %}">
+        <span style="font-weight: bold;">Профиль</span>
+      </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">
-            <span style="font-weight: bold;">Войти</span>
-        </a>
+      <a class="nav-link" href="{% url 'logout' %}">
+        <span style="font-weight: bold;">Выйти</span>
+      </a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'profile' %}">
-            <span style="font-weight: bold;">Профиль</span>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}">
-            <span style="font-weight: bold;">Выйти</span>
-        </a>
-    </li>
-</ul>
+    {% endif %}
+  </ul>
 {% endblock %}
 
 
